[tool.poetry]
name = "kg-3course"
version = "0.1.0"
description = ""
authors = ["Aleksey Cherniaev <cherniaevaleksey2304@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
